force-app/main/default/objects/FIN_InvoiceItem__c/FIN_InvoiceItem__c.object-meta.xml
<CustomObject>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>II-{0000000000}</displayFormat>
        <label>Invoice Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>