force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_AccountforInvoice__c.field-meta.xml
<CustomField>
    <fullName>FIN_AccountforInvoice__c</fullName>
    <formula>FIN_LibraryAssociation__r.FIN_Financial_Code__r.FIN_Business_Unit__r.Name
+ &apos;.&apos; +
FIN_LibraryAssociation__r.FIN_Financial_Code__r.FIN_Financial_Chart_of_Accounts__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account # for Invoice</label>
    <type>Text</type>
</CustomField>