force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_AdjustmentforInvoice__c.field-meta.xml
<CustomField>
    <fullName>FIN_AdjustmentforInvoice__c</fullName>
    <description>will be used instead of base rate according to applied rate</description>
    <label>Adjustment for Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>