force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_AmountbyQty__c.field-meta.xml
<CustomField>
    <fullName>FIN_AmountbyQty__c</fullName>
    <label>Amount * Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>