force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_Applicable__c.field-meta.xml
<CustomField>
    <fullName>FIN_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applicable for Consumption qty or revenue</description>
    <label>Applicable for Consumption</label>
    <type>Checkbox</type>
</CustomField>