force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_Applied__c.field-meta.xml
<CustomField>
    <fullName>FIN_Applied__c</fullName>
    <formula>IF( FIN_AdjustmentforInvoice__c != 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applied Accumulator?</label>
    <type>Checkbox</type>
</CustomField>