force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_AppliedRateforInvoice__c.field-meta.xml
<CustomField>
    <fullName>FIN_AppliedRateforInvoice__c</fullName>
    <label>Accumulator Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>