force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_AppliedUnitPriceforInvoice__c.field-meta.xml
<CustomField>
    <fullName>FIN_AppliedUnitPriceforInvoice__c</fullName>
    <label>Accumulator Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>