force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_EntryType__c.field-meta.xml
<CustomField>
    <fullName>FIN_EntryType__c</fullName>
    <label>Entry Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>StandardEntry</fullName>
                <label>Standard Entry</label>
            </value>
            <value>
                <fullName>ManualAdjustment</fullName>
                <label>Manual Adjustment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>