force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_ParentInvoiceSchedule__c.field-meta.xml
<CustomField>
    <fullName>FIN_ParentInvoiceSchedule__c</fullName>
    <label>Parent Invoice Schedule</label>
    <referenceTo>FIN_InvoiceSchedule__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>