force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_Payment__c.field-meta.xml
<CustomField>
    <fullName>FIN_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>FIN_Payment__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>