force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_PriceCodeTypeforInvoice__c.field-meta.xml
<CustomField>
    <fullName>FIN_PriceCodeTypeforInvoice__c</fullName>
    <formula>IF( FIN_PaymentDistribution__c != null, FIN_PaymentDistribution__r.FIN_Payment__r.FIN_Order__r.FIN_PriceCodeType__c,
       IF( FIN_SalesTransactions__c != null, FIN_SalesTransactions__r.Order.FIN_PriceCodeType__c, 
             IF (FIN_Payment__c != null, FIN_Payment__r.FIN_Order__r.FIN_PriceCodeType__c, null
              )
       )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Code Type for Invoice</label>
    <type>Text</type>
</CustomField>