force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_QuantityforInvoiceQty__c.field-meta.xml
<CustomField>
    <fullName>FIN_QuantityforInvoiceQty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>