force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_Sales__c.field-meta.xml
<CustomField>
    <fullName>FIN_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>