force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_SalesTransactions__c.field-meta.xml
<CustomField>
    <fullName>FIN_SalesTransactions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Transactions</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>