force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_SubContract__c.field-meta.xml
<CustomField>
    <fullName>FIN_SubContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubContract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>