force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_TotalGrossAmountforInvoice__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalGrossAmountforInvoice__c</fullName>
    <formula>IF ( FIN_SalesTransactions__c != null, FIN_SalesTransactions__r.FIN_TotalGrossAmount__c ,
IF ( FIN_PaymentDistribution__c != null, FIN_PaymentDistribution__r.FIN_DistributionAmount__c,
IF ( FIN_Payment__c != null, FIN_Payment__r.FIN_PaymentAmount__c, 0
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gross Amount for Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>