force-app/main/default/objects/FIN_InvoiceItem__c/fields/FIN_TotalNetAmountforInvoice__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalNetAmountforInvoice__c</fullName>
    <label>Total Net Amount for Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>