force-app/main/default/objects/FIN_InvoiceItem__c/recordTypes/II_Sales_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>II_Sales_Record_Type</fullName>
    <active>true</active>
    <description>original name - II Sales Record Type</description>
    <label>II Manual Adjustments Record Type</label>
</RecordType>