force-app/main/default/objects/FIN_InvoiceItem__c/recordTypes/II_SalesTransactions_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>II_SalesTransactions_Record_Type</fullName>
    <active>true</active>
    <label>II SalesTransactions Record Type</label>
</RecordType>