force-app/main/default/objects/FIN_InvoiceItem__c/validationRules/LibraryAssociationRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>LibraryAssociationRequired</fullName>
    <active>false</active>
    <description>Library Association is required if Payment Distribution is not selected.</description>
    <errorConditionFormula>ISBLANK(FIN_PaymentDistribution__c) &amp;&amp; ISBLANK(FIN_LibraryAssociation__c)</errorConditionFormula>
    <errorDisplayField>FIN_LibraryAssociation__c</errorDisplayField>
    <errorMessage>Library Association is required if Payment Distribution is not selected.</errorMessage>
</ValidationRule>