force-app/main/default/objects/FIN_InvoiceItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_ParentInvoiceSchedule__c</columns>
    <columns>FIN_Contract__c</columns>
    <columns>FIN_SubContract__c</columns>
    <columns>FIN_PaymentDistribution__c</columns>
    <columns>FIN_LibraryAssociation__c</columns>
    <columns>FIN_EntryType__c</columns>
    <columns>FIN_ManualAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>